--- a/skeleton-main/package.json
+++ b/skeleton-main/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "google-auth-library": "^6.1.3",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.8.3",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
@@ -35,12 +36,11 @@
     "react-router-dom": "^6.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "url-loader": "^4.1.1",
-    "jwt-decode": "^3.1.2"
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "vite": "^4.0.0",
+    "vite": "^4.5.7",
     "vite-plugin-svgr": "^2.4.0"
   }
 }
