--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "framer-motion": "^12.0.5",
     "google-auth-library": "^6.1.3",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.8.3",
