--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/material": "^6.4.1",
     "@mui/system": "^6.4.1",
     "@react-oauth/google": "^0.12.1",
+    "bson": "5.5.1",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
     "dotenv": "^16.0.3",
@@ -34,7 +35,10 @@
     "framer-motion": "^12.0.5",
     "google-auth-library": "^6.1.3",
     "jwt-decode": "^3.1.2",
-    "mongoose": "^7.8.3",
+    "mongodb": "5.9.2",
+    "mongoose": "7.8.6",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "5.0.2",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
